--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=.\\SQLEXPRESS;Database=MvcMovieContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
